# MIP-DD

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  bugger-config.cmake.in  exact-config.cmake.in  parameter.txt  parameters.txt
binaries/: CMakeLists.txt
check/instances/: flugpl.vipr  flugpl2.vipr
settings/: default.set
src/: bugger.cpp
src/bugger/: CMakeConfig.hpp.in  Config.hpp
src/bugger/data/: Bugger.hpp  BuggerOptions.hpp  BuggerParameters.hpp  BuggerRun.hpp  ConstraintMatrix.cpp  ConstraintMatrix.hpp  MatrixBuffer.hpp  Objective.hpp  Problem.hpp  ProblemBuilder.hpp  RowFlags.hpp  SingleRow.hpp  Solution.hpp  SolverSettings.hpp  SparseStorage.cpp  SparseStorage.hpp  VariableDomains.cpp  VariableDomains.hpp
src/bugger/interfaces/: BuggerStatus.hpp  ScipExactInterface.hpp  ScipInterface.hpp  ScipRationalInterface.hpp  ScipRealInterface.hpp  SolverInterface.hpp  SolverResult.hpp  SolverStatus.hpp  SoplexInterface.hpp  SoplexRationalInterface.hpp  SoplexRealInterface.hpp  Status.hpp
src/bugger/io/: Message.hpp  MpsParser.hpp  MpsWriter.hpp  SolParser.hpp  SolWriter.hpp
src/bugger/misc/: Alloc.hpp  Array.hpp  Flags.hpp  Hash.hpp  MultiPrecision.hpp  Num.hpp  NumericalStatistics.hpp  OptionsParser.hpp  ParameterSet.hpp  StableSum.hpp  String.hpp  Timer.hpp  Vec.hpp  VectorUtils.hpp  VersionLogger.hpp  compress_vector.hpp  fmt.hpp  tbb.hpp
src/bugger/modifiers/: BuggerModifier.hpp  CoefficientModifier.hpp  ConsroundModifier.hpp  ConstraintModifier.hpp  FixingModifier.hpp  ObjectiveModifier.hpp  SettingModifier.hpp  SideModifier.hpp  VariableModifier.hpp  VarroundModifier.hpp
src/bugger/modules/: BuggerModul.hpp  CoefficientModul.cpp  CoefficientModul.hpp  ConsRoundModul.cpp  ConsRoundModul.hpp  ConsroundModul.hpp  ConstraintModul.cpp  ConstraintModul.hpp  FixingModul.cpp  FixingModul.hpp  ObjectiveModul.cpp  ObjectiveModul.hpp  SettingModul.cpp  SettingModul.hpp  SideModul.cpp  SideModul.hpp  VariableModul.cpp  VariableModul.hpp  VarroundModul.cpp  VarroundModul.hpp
src/exact/: CMakeConfig.hpp.in  Config.hpp
src/exact/data/: ConstraintMatrix.cpp  ConstraintMatrix.hpp  ExactOptions.hpp  MatrixBuffer.hpp  Objective.hpp  Problem.hpp  ProblemBuilder.hpp  RowFlags.hpp  SingleRow.hpp  Solution.hpp  SparseStorage.cpp  SparseStorage.hpp  VariableDomains.cpp  VariableDomains.hpp
src/exact/interfaces/: EventCatcher.hpp  NodeInfeasible.hpp  ScipInterface.hpp  ViprInterface.hpp
src/exact/io/: Message.hpp  MpsParser.hpp  MpsWriter.hpp  SolParser.hpp  SolWriter.hpp
src/exact/misc/: Alloc.hpp  Array.hpp  Flags.hpp  Hash.hpp  MultiPrecision.hpp  Num.hpp  NumericalStatistics.hpp  OptionsParser.hpp  ParameterSet.hpp  StableSum.hpp  String.hpp  Timer.hpp  Vec.hpp  VectorUtils.hpp  VersionLogger.hpp  Wrappers.hpp  compress_vector.hpp  fmt.hpp  tbb.hpp
